--- a/chapter2-10.css
+++ b/chapter2-10.css
@@ -8,3 +8,37 @@ clearfix::after {
   display: both;
   clear: both;
 }
+header {
+  width: 100%;
+  height: 50px;
+  background-color: #ff9a4b;
+}
+main {
+  width: 960px;
+}
+.main-box1 {
+  margin: 50px 30px 50px 0;
+  background-image: url(flow01.png);
+  float: left;
+}
+.title {
+  padding: 15px 5px;
+}
+.step {
+  color: #fff;
+  background-color: #ff9a4b;
+}
+.main-box2 {
+  margin: 50px 30px 50px 0;
+  background-image: url(flow02.png);
+  float: left;
+}
+.main-box3 {
+  margin: 50px 50px;
+  background-image: url(flow03.png);
+  float: left;
+}
+footer {
+  width: 100%;
+  height: 50px;
+}
