--- a/chapter2-10.css
+++ b/chapter2-10.css
@@ -3,42 +3,60 @@
   padding: 0;
   box-sizing: border-box;
 }
-clearfix::after {
+.clearfix::after {
   content: "";
-  display: both;
+  display: block;
   clear: both;
 }
 header {
-  width: 100%;
   height: 50px;
   background-color: #ff9a4b;
 }
 main {
   width: 960px;
+  margin: 50px auto;
 }
-.main-box1 {
-  margin: 50px 30px 50px 0;
-  background-image: url(flow01.png);
+.box {
+  width: 300px;
+  margin-right: 30px;
+  background-color: #eee;
+  padding: 10px;
+  position: relative;
   float: left;
 }
+.box:last-child {
+  margin-right: 0;
+}
+.main-box1 {
+  background-image: url(img/flow01.png);
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+.main-box2 {
+  background-image: url(img/flow02.png);
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+.main-box3 {
+  background-image: url(img/flow03.png);
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
 .title {
-  padding: 15px 5px;
+  margin: 15px 0 5px;
 }
 .step {
+  padding: 3px;
+  position: absolute;
+  top: 0;
+  left: 0;
   color: #fff;
   background-color: #ff9a4b;
 }
-.main-box2 {
-  margin: 50px 30px 50px 0;
-  background-image: url(flow02.png);
-  float: left;
-}
-.main-box3 {
-  margin: 50px 50px;
-  background-image: url(flow03.png);
-  float: left;
-}
 footer {
-  width: 100%;
   height: 50px;
+  background-color: #aaaaaa;
 }
