--- a/chapter2-10.css
+++ b/chapter2-10.css
@@ -66,10 +66,12 @@ footer {
   }
   .box {
   	width: 90%;
+  	margin:0 auto;
   	margin-bottom: 20px;
   	float: none;
   }
   .box:last-child {
+  	margin: 0 auto;
   	margin-bottom: 0;
   }
   footer {
